# v6-preprocess-basics-py

./: .copier-answers.yml  Dockerfile  Makefile  README.md  algorithm_store.json  pyproject.toml
.github/workflows/: release.yaml
docs/: README.md  conf.py  index.rst
docs/v6-preprocess-basics-py/: implementation.rst  usage.rst
test/: test_data.csv
v6-preprocess-basics-py/: __init__.py
